--- a/portfolio/src/Components/Navbar/Navbar.css
+++ b/portfolio/src/Components/Navbar/Navbar.css
@@ -26,6 +26,7 @@
     display: flex;
     gap: 2rem;
     margin-right: 4rem;
+    cursor: pointer;
 }
 .n-list>ul>li:hover{
     cursor: pointer;
@@ -33,4 +34,12 @@
 }
 .n-button{
     flex: 2;
+}
+@media screen and (max-width: 480px){
+    .n-list{
+        display: none;
+    }
+    .n-button{
+        display: none;
+    }
 }
